[package]
name = "lynx-vmix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19"
tao = "0.30"
open = "5.0"
local-ip-address = "0.6"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
indexmap = { version = "2.13.0", features = ["serde"] }

